force-app/main/default/objects/Tariff_Change_Request__c/Tariff_Change_Request__c.object-meta.xml
<CustomObject>
  <label>Tariff Change Request</label>
  <pluralLabel>Tariff Change Requests</pluralLabel>
  <description>
    A server-issued, expiring proposal to change a customer's
    tariff (ADR-020). The agent can PROPOSE one (which mints the request
    number) but can only APPLY one by presenting that request number
    back. Because the number exists only in the output of the propose step, the
    model cannot fabricate consent: the handshake is enforced by the data
    flow, not by the prompt.
  </description>
  <nameField>
    <label>Request Number</label>
    <type>AutoNumber</type>
    <displayFormat>TCR-{00000}</displayFormat>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>