force-app/main/default/objects/Tariff_Change_Request__c/fields/Account__c.field-meta.xml
<CustomField>
  <fullName>Account__c</fullName>
  <label>Account</label>
  <type>Lookup</type>
  <referenceTo>Account</referenceTo>
  <relationshipLabel>Tariff Change Requests</relationshipLabel>
  <relationshipName>Tariff_Change_Requests</relationshipName>
  <deleteConstraint>Cascade</deleteConstraint>
  <required>true</required>
  <description>
    The customer the proposal belongs to. Confirm is scoped to this account: a
    request minted for one customer can never be applied to another.
  </description>
</CustomField>