force-app/main/default/objects/Tariff_Change_Request__c/fields/Annual_Saving__c.field-meta.xml
<CustomField>
    <fullName>Annual_Saving__c</fullName>
    <label>Quoted Annual Saving</label>
    <type>Currency</type>
    <precision>14</precision>
    <scale>2</scale>
    <description>The saving the agent quoted when the proposal was made. Persisted so the promise made to the customer is auditable after the fact.</description>
</CustomField>