force-app/main/default/objects/Tariff_Change_Request__c/fields/Applied_At__c.field-meta.xml
<CustomField>
  <fullName>Applied_At__c</fullName>
  <label>Applied At</label>
  <type>DateTime</type>
</CustomField>