force-app/main/default/objects/Tariff_Change_Request__c/fields/Assumption_Basis__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Basis__c</fullName>
    <label>Assumption Basis</label>
    <type>LongTextArea</type>
    <length>4000</length>
    <description>The assumption the quoted saving depends on (e.g. that the higher consumption is permanent). Persisted so a human can see what the customer was actually told.</description>
</CustomField>