force-app/main/default/objects/Tariff_Change_Request__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName>
    <label>Expires At</label>
    <type>DateTime</type>
    <required>true</required>
    <description>Consent is perishable. A proposal that is not confirmed within the window can never be applied — the agent must re-quote, which re-states the assumption to the customer.</description>
</CustomField>