force-app/main/default/objects/Tariff_Change_Request__c/fields/Proposed_Tariff__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Tariff__c</fullName>
    <label>Proposed Tariff</label>
    <type>Lookup</type>
    <referenceTo>Tariff__c</referenceTo>
    <relationshipLabel>Tariff Change Requests</relationshipLabel>
    <relationshipName>Tariff_Change_Requests</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>