force-app/main/default/objects/Tariff_Change_Request__c/fields/Service_Contract_Ref__c.field-meta.xml
<CustomField>
  <fullName>Service_Contract_Ref__c</fullName>
  <label>Service Contract</label>
  <type>Lookup</type>
  <referenceTo>Service_Contract__c</referenceTo>
  <relationshipLabel>Tariff Change Requests</relationshipLabel>
  <relationshipName>Tariff_Change_Requests</relationshipName>
</CustomField>