force-app/main/default/objects/Tariff_Change_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Proposed</fullName><default>true</default><label>Proposed</label></value>
            <value><fullName>Terms_Presented</fullName><default>false</default><label>Binding Terms Presented</label></value>
            <value><fullName>Applied</fullName><default>false</default><label>Applied</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>